[package]
name = "tar-append"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
directories = "5.0"
dirs = "5.0"
hex = "0.4"
indicatif = "0.17"
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
walkdir = "2.5"
which = "6.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
